# fastverk-app

./: .bazelrc  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: ci.yml  ios-release.yml  release.yml
app/dashboard/: BUILD.bazel
app/dashboard/Sources/: App.swift  ProcessRpcInvoker.swift
app/desktop/: BUILD.bazel  Cargo.toml
app/desktop/src/: main.rs
app/ios/: BUILD.bazel  FastverkConsole.entitlements  Fastverk_Console_App_Store.mobileprovision  Info.plist
app/ios/Sources/: Config.swift  FastverkApp.swift
app/ios/Sources/Agents/: AgentsClient.swift  AgentsView.swift
app/ios/Sources/Chat/: AssistantView.swift  ChatBlockView.swift  ChatClient.swift  ChatEvent.swift
app/ios/Sources/Fleet/: FleetClient.swift  FleetView.swift  TranscriptFrame.swift  TranscriptView.swift
app/ios/Sources/Integrations/: IntegrationsClient.swift  IntegrationsView.swift
app/ios/Sources/Shared/: MarkdownText.swift
app/ios/Sources/Shell/: AppModel.swift  NavTree.swift  PanelHostView.swift  ShellClient.swift  ShellNavView.swift
app/ios/Sources/Transport/: AuthService.swift  EventStream.swift  Keychain.swift  NetworkRpcInvoker.swift
app/settings/: BUILD.bazel  Cargo.toml
app/settings/src/: main.rs
assets/: BUILD.bazel
deploy/cdn/: index.html
deploy/cfn/: app-distribution.yaml
proto/fastverk/ui/v1/: BUILD.bazel  panels.textproto
tools/: workspace_status.sh
tools/credhelper/: BUILD.bazel  Cargo.toml  cred_helper.rs  gh-cred-helper.sh
tools/fvdjson/: BUILD.bazel  fvd_json.rs
tools/macos/: BUILD.bazel  Info.plist  defs.bzl  entitlements.plist  install.sh  sign_notarize.sh
tools/swiftcheck/: BUILD.bazel  hello.swift
