"""fastverk — the menu-bar app (tao event loop + tray-icon/muda). UI is
built via rules_rust + crate_universe like the rest of the workspace; the
macOS framework links (AppKit/Foundation, etc.) come through the tao /
tray-icon crates' build scripts.

fvkit comes from the @fvkit module (@fvkit//app/core:fvkit), not the
crate_universe — so third-party crates are hand-listed from the @crates
from_specs repo (see MODULE.bazel), mirroring how wave depends on forge.
"""

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "fastverk",
    srcs = glob(["src/**/*.rs"]),
    # Embedded by include_bytes! for the tray icon.
    compile_data = ["//assets:tray-icon.png"],
    edition = "2021",
    deps = [
        "@crates//:anyhow",
        "@crates//:image",
        "@crates//:tao",
        "@crates//:tokio",
        "@crates//:tray-icon",
        "@fvkit//app/core:fvkit",
    ],
)

exports_files(["Cargo.toml"])
