[package]
name = "fastverk"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "fastverk — the menu-bar app (tray + egui settings), a gRPC client to fvd."

[[bin]]
name = "fastverk"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tao.workspace = true
tray-icon.workspace = true
fvkit = { path = "../core" }
tokio.workspace = true
