"""fastverk universal Bazel credential helper (config-driven, lifted from
aion). Resolves auth headers from the connection registry + OS keychain
via //app/core:fvkit. Replaces the gh-cred-helper.sh / glab shell scripts;
wired into the generated ~/.bazelrc as a single unscoped
--credential_helper.
"""

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

# fvkit comes from the @fvkit module (@fvkit//app/core:fvkit), not the
# crate_universe. The helper has no third-party crate deps of its own.
rust_binary(
    name = "cred_helper",
    srcs = ["cred_helper.rs"],
    edition = "2021",
    deps = ["@fvkit//app/core:fvkit"],
)

rust_test(
    name = "cred_helper_test",
    crate = ":cred_helper",
    edition = "2021",
)

exports_files(["cred_helper.rs"])

# ─── Release artifact: cred-helper layer tar (aion consumption) ───────
#
# The owner chose the MINIMAL path: fastverk publishes the cred-helper
# binaries + this linux/amd64 layer tar as GitHub Release artifacts. There
# is NO fastverk OCI image and NO fastverk base image — aion keeps and
# owns its own base image and just drops the fastverk-published cred-helper
# into the same `/usr/local/bin/cred-helper` (mode 0755).
#
# This `pkg_tar` IS the layer-tar release artifact. aion can `http_file`
# it and add it via `oci_image(tars=[...])`, OR `http_file` the raw
# `cred-helper-linux-amd64` binary and `pkg_tar` it itself — aion's choice.
#
# Build it with the linux/amd64 cross-compile so the binary inside the
# layer is an x86-64 ELF (the CI image arch), even when built on a mac:
#
#   bazel build //tools/credhelper:cred_helper_layer \
#       --platforms=//tools/oci:linux_amd64
#
# Verified: the produced binary is `ELF 64-bit LSB ... x86-64 ...
# GNU/Linux` and the tar lists `usr/local/bin/cred-helper` (-rwxr-xr-x).
#
# Credentials are NEVER baked into this artifact — it carries only the
# helper binary. Tokens are injected as environment variables per
# consuming CI job (from the CI platform's encrypted secret store); the
# helper reads them via its env_fallback path.

# Layer: the cred-helper binary at the canonical /usr/local/bin path.
# `remap_paths` rehomes the binary basename (`cred_helper`) to the path
# aion's bazelrc expects (`cred-helper`, hyphen). mode 0755 so it's
# directly executable by bazel.
pkg_tar(
    name = "cred_helper_layer",
    srcs = [":cred_helper"],
    mode = "0755",
    # Strip the rust_binary's package dir; place the file at the root
    # of the tar under the canonical install path.
    package_dir = "/usr/local/bin",
    remap_paths = {"/cred_helper": "/cred-helper"},
    # Drop the directory prefix from the rust_binary output so only the
    # basename lands under package_dir.
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)
