"""Package the fastverk menu-bar app into a macOS .app + .dmg.

Build explicitly (these are `manual` + `local`):
  bazel build //tools/macos:fastverk_dmg     # the installer .dmg
  bazel build //tools/macos:fastverk_app     # just the bundled .app (tar)

Ad-hoc signed by default; pass a Developer ID via the `identity` attr of
fastverk_app once available. Notarization is gated (see release.yml).
"""

load("//tools/macos:defs.bzl", "macos_app_bundle", "macos_dmg")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Info.plist",
    "entitlements.plist",
])

# Build AppIcon.icns from the fastverk org logo via sips + iconutil.
genrule(
    name = "AppIcon",
    srcs = ["//assets:fastverk-logo.png"],
    outs = ["AppIcon.icns"],
    cmd = """
set -e
SRC=$(location //assets:fastverk-logo.png)
S="$$(mktemp -d)/icon.iconset"
mkdir -p "$$S"
for sz in 16 32 128 256 512; do
  sips -z $$sz $$sz "$$SRC" --out "$$S/icon_$${sz}x$${sz}.png" >/dev/null
  d=$$(( sz * 2 ))
  sips -z $$d $$d "$$SRC" --out "$$S/icon_$${sz}x$${sz}@2x.png" >/dev/null
done
iconutil -c icns "$$S" -o $@
""",
    tags = ["local", "manual"],
)

macos_app_bundle(
    name = "fastverk_app",
    app_name = "fastverk",
    binaries = {
        "//app/desktop:fastverk": "fastverk",
        "//app/daemon:fvd": "fvd",
        "//app/settings:fastverk-settings": "fastverk-settings",
        "//tools/credhelper:cred_helper": "fastverk-cred-helper",
    },
    icon = ":AppIcon",
    plist = ":Info.plist",
)

macos_dmg(
    name = "fastverk_dmg",
    app = ":fastverk_app",
    app_name = "fastverk",
    volname = "fastverk",
)
