# P0 toolchain probe (temporary). Validates that rules_swift can build a
# swift_binary linking SwiftUI under Command Line Tools on Bazel 9.
load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "swiftcheck",
    srcs = ["hello.swift"],
    # SwiftUI lives in the macOS SDK; CLT ships it. swift_binary picks up SDK
    # frameworks via the apple_support toolchain.
    tags = ["manual"],
)
